# addgene-mcp

./: README.md  debug_addgene_response.html  debug_alzheimer_response.html  debug_html_fetch.py  debug_runner.py  debug_twisted.py  pyproject.toml  test_selectors.py
src/addgene_mcp/: server.py
src/addgene_mcp/scrapy_addgene/: runner.py
src/addgene_mcp/scrapy_addgene/pipelines/: duplicates.py
src/addgene_mcp/scrapy_addgene/spiders/: plasmids.py
test/: BORROWED_TEST_CASES.md  README_JUDGE_TESTING.md  README_TESTING.md  __init__.py  conftest.py  judge_prompt.txt  manual_test_questions.py  run_tests.py  test_alzheimer_mock.py  test_alzheimer_search.py  test_basic_search.py  test_comprehensive_mcp.py  test_download_integration.py  test_download_sequence.py  test_error_handling.py  test_filter_example.py  test_filters.py  test_judge.py  test_pagination.py  test_qa.json  test_scrapy_url.py  test_simple_validation.py  test_windows_debug.py
