[project]
name = "addgene-mcp"
version = "0.1.0"
description = "MCP for Addgene - Plasmid Repository API"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "eliot>=1.17.5",
    "pycomfort>=0.0.18",
    "fastmcp>=2.8.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "tenacity>=9.1.2",
    "scrapy>=2.13.2",
    "scrapy-splash>= 0.11.1",
]

[project.scripts]
addgene-mcp = "addgene_mcp.server:cli_app_stdio"
server = "addgene_mcp.server:cli_app"
stdio = "addgene_mcp.server:cli_app_stdio"
sse = "addgene_mcp.server:cli_app_sse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/addgene_mcp"]

[tool.hatch.build]
exclude = [
    "*.log",
    "logs/",
    "images/",
    ".venv/",
    ".pytest_cache/",
    "test/",
    "*.db",
    "temp*.sqlite*",
    "test*.sqlite*",
    "debug*.sqlite*",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
] 